# BIOC0016-MachineLearning

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  index.ipynb  setup.cfg  style.css
bioimageml/: __init__.py  api.py  base.py  dataset.py  model.py  visualise.py
bioimageml/data/: model.pt
bioimageml/widgets/: __init__.py  widget.py
data/: model.h5
files/: style.css
helpers/: _core.py  dataset.py  model.py
